--- a/src/librarian/units/main/umainform.lfm
+++ b/src/librarian/units/main/umainform.lfm
@@ -1,11 +1,11 @@
 object MainForm: TMainForm
-  Left = 344
-  Height = 794
-  Top = 110
-  Width = 1228
+  Left = -8
+  Height = 1027
+  Top = -8
+  Width = 1916
   Caption = 'Библиотекарь'
-  ClientHeight = 774
-  ClientWidth = 1228
+  ClientHeight = 0
+  ClientWidth = 0
   Menu = MainMenu
   OnClose = FormClose
   OnCreate = FormCreate
@@ -14,8 +14,8 @@ object MainForm: TMainForm
   object StatusBar: TStatusBar
     Left = 0
     Height = 23
-    Top = 751
-    Width = 1228
+    Top = -23
+    Width = 0
     Panels = <    
       item
         Width = 350
@@ -30,25 +30,25 @@ object MainForm: TMainForm
   end
   object LibraryPanel: TPanel
     Left = 0
-    Height = 751
+    Height = 0
     Top = 0
     Width = 352
     Align = alLeft
     TabOrder = 1
   end
   object FormPanel: TPanel
-    Left = 357
-    Height = 751
+    Left = 0
+    Height = 0
     Top = 0
-    Width = 871
+    Width = 0
     Align = alClient
     Color = clWindow
     ParentColor = False
     TabOrder = 2
   end
   object MainSplitter: TSplitter
-    Left = 352
-    Height = 751
+    Left = 0
+    Height = 0
     Top = 0
     Width = 5
   end
@@ -63,6 +63,10 @@ object MainForm: TMainForm
         ShortCut = 16467
         OnClick = SaveLibraryMenuItemClick
       end
+      object SettingsMenuItem: TMenuItem
+        Caption = 'Настройка'
+        OnClick = SettingsMenuItemClick
+      end
       object Separator: TMenuItem
         Caption = '-'
       end
@@ -71,9 +75,12 @@ object MainForm: TMainForm
         OnClick = ExitMenuItemClick
       end
     end
-    object SettingsMenuItem: TMenuItem
-      Caption = 'Настройка'
-      OnClick = SettingsMenuItemClick
+    object MenuItem2: TMenuItem
+      Caption = 'Справка'
+      object MenuItem3: TMenuItem
+        Caption = 'О программе...'
+        OnClick = MenuItem3Click
+      end
     end
   end
   object LibraryImageList: TImageList
